<resources>
    <string name="app_name" translatable="false">Wi-Fi Scanner</string>
    <string name="about_version">version %s</string>
    <string name="about_source_code"><a href="https://github.com/alexandreroman/wifiscanner">Get source code</a></string>

    <string name="nav_info">Info</string>
    <string name="nav_hosts">Hosts</string>
    <string name="nav_networks">Networks</string>
    <string name="nav_menu">Menu</string>
    <string name="menu_about">About this app</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_licenses">Software licenses</string>

    <string name="loading_data">Loading data...</string>
    <string name="dialog_error">Error</string>

    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <string name="info_ssid">SSID</string>
    <string name="info_hidden_ssid">Hidden SSID</string>
    <string name="info_signal_level">Signal level</string>
    <string name="info_ip_address">IP address</string>
    <string name="info_netmask">Network mask</string>
    <string name="info_ipv6_addresses">IPv6 addresses</string>
    <string name="info_gateway_address">Gateway address</string>
    <string name="info_dns_servers">DNS servers</string>
    <string name="info_network_metered">Network metered</string>
    <string name="info_value_yes">Yes</string>
    <string name="info_value_no">No</string>
    <string name="info_value_unknown">Unknown</string>
    <string name="info_value_none">None</string>
    <string name="info_value_na">N/A</string>
    <string name="info_permission_warning">Some information (such as SSID) require <a href="https://developer.android.com/about/versions/marshmallow/android-6.0-changes#behavior-hardware-id">additional permissions</a> in order to get displayed.</string>
    <string name="info_permission_warning_action">Review permissions</string>
    <string name="info_no_wifi">Your device is not connected to a Wi-Fi network.</string>
    <string name="info_http_proxy">HTTP proxy</string>
    <string name="info_domains">Domains</string>
    <string name="info_frequency">Frequency</string>
    <string name="info_link_speed">Link speed</string>

    <string name="networks_start_scan">Start scan</string>
    <string name="networks_start_scan_wifi_disabled">Wi-Fi is not enabled on this device: unable to start scan.</string>
    <string name="networks_start_scan_permission_warning">Scanning wireless networks requires access to your device location.</string>
    <string name="networks_start_scan_permission_warning_action">Review permissions</string>
    <string name="networks_channel">channel %d</string>
    <string name="networks_band_24">2.4 GHz</string>
    <string name="networks_band_5">5 GHz</string>
    <string name="networks_band_unknown">unknown band</string>

    <string name="hosts_start_scan">Start scan</string>
    <string name="hosts_stop_scan">Stop</string>
    <string name="hosts_scan_init">Starting scan…</string>
</resources>
